# Envest-Mcp-Server

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.dev.yml  docker-compose.yml  ecosystem.config.js
mcps/scada/: Dockerfile  pyproject.toml
mcps/scada/data/: tokens.json  users.json
mcps/scada/instances/CorumScada/: instance.yaml  manifest.json
mcps/scada/instances/_template/: instance.yaml  manifest.json
mcps/scada/instances/_template_database/: .env.example  instance.yaml
mcps/scada/instances/kaskidb_/: instance.yaml  manifest.json
mcps/scada/instances/korubin_main/: instance.yaml  manifest.json
mcps/scada/instances/korucaps/: instance.yaml  manifest.json
mcps/scada/instances/test_database/: .env.example  instance.yaml  manifest.json
mcps/scada/skills/aqua-devices/: SKILL.md  alarms-and-warnings.md  display-and-menus.md  hardware-reference.md  hedef-status.md  modbus-reference.md  modem-status.md  motor-protection.md  operating-modes.md  ultrasonic-flowmeter.md
mcps/scada/skills/core-rules/: SKILL.md
mcps/scada/skills/database-best-practices/: SKILL.md
mcps/scada/skills/envest-urunler/: SKILL.md  company-intro.md
mcps/scada/skills/korubin-scada/: SKILL.md
mcps/scada/src/scada_mcp/: auth.py  call_tracker.py  chart_contract.py  chart_hints.py  cli.py  combined.py  compare_log_metrics.py  config.py  cors.py  db.py  dma_demand.py  export_files.py  exports_http.py  korubin_ui_tool_routing.py  log_series_align.py  log_value_cleanup.py  manifest.py  multi_mcp.py  product_docs.py  pump_tools.py  scada_tag_lexicon.py  server_factory.py  (+4 more)
(+160 files in other folders)
